css/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

:root{
    --darkest-color: #1d2e38;
    --dark-color: #466971;
    --light-color: #f5edd5;
    --lightest-color: #f1efe7;
}

html{
    height: 100%;
}
body{
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    color: var(--darkest-color);
   /*   background image, needs color changes to work
    background-image: url("../background4.jpg");
    background-size: cover;*/
    background-color: var(--lightest-color);
    min-height: 100vh;
    margin: 0;
    display: flex;
    flex-direction: column;
}
.header-div{
    /*background-color: var(--darkest-color);
    color:var(--lightest-color);
    margin-bottom: 1em;*/
    padding-left: .65em;
    display: flex;
    justify-content: space-between;
}
.header-div-contact{
    padding-right: .55em;
    padding-top: .50em;
}
.header-div-contact ul{
    list-style: none;
}

h2{
    text-align:center;
}
section{
    padding: 1em;
}



/* licni podaci */
.section-licni-podaci{
    background-color: var(--dark-color);
    color: var(--lightest-color);
    border: .45em solid var(--darkest-color);
    border-left: none;
    border-right: none;
}

/* poznavanje tehnologija*/

.section-poznavanje-tehnologija{
    color:var(--light-color);
    background-color: var(--darkest-color);
    border: .55em var(--dark-color) solid;
    margin-top: 1em;
    margin-bottom: 1em;
}

.section-poznavanje-tehnologija-list li{
    padding: .40em;
}

/* radno iskustvo */

.section-radno-iskustvo{
   background-color: #92ac9c;
}

.radno-iskustvo-item{
    background-color: var(--dark-color);
    color: var(--lightest-color);
    padding: 1em;
    margin-right: 0.5em;
    margin-bottom: 0.5em;
    width: 100%;
    box-shadow: inset .25em .25em 1em var(--darkest-color),
                inset -.25em -.25em 1em var(--darkest-color);
    transition: background-color 0.2s;
}
.radno-iskustvo-item:hover{
    background-color: var(--darkest-color);
}
.radno-iskustvo-item div{
    text-align: center;
}


/* obrazovanje section */

.section-obrazovanje{
    background-color: var(--dark-color);
    color: var(--lightest-color);
    border: .45em solid var(--darkest-color);
    margin-top: 1em;
    margin-bottom: 1em;
}

.section-obrazovanje-item{
    margin-bottom: 1.5em;
    border-bottom: 1px solid black;
}
.section-obrazovanje-header{
    font-size: 1.5em;
    font-weight: bold;
    margin-bottom: .55em;
}
.section-obrazovanje-smer{
    font-size: 1.2em;
}


/* footer */
.footer{
    margin-top: auto;
    background-color: var(--darkest-color);
    color: white;
    padding: 5px;
}
.footer-list{
    text-align: center;
    list-style-type: none;
    margin: 0;
    padding: 0;
}
.footer-list li{
   display: inline-block;
   padding-right: 15px;
   padding-top: 3px;
}

@media (min-width: 800px){
    div{
        font-size: 1.3em;
    }
    h1{
        font-size: 2.85em;
    }
    h2{
        font-size: 2.5em;
    }
    section{
        margin-left: 1em;
        margin-right: 1em;
    }

    .section-licni-podaci{
        border: .45em solid var(--darkest-color);
    }

    .radno-iskustvo-container{
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        justify-content: center;
    }
    .section-obrazovanje{
        padding-left: 0;
    }
}
@media(min-width: 1680px){
    section{
        margin-left: 5em;
        margin-right: 5em;
    }
}
/*

boje https://mycolor.space/?hex=%23F5EDD5&sub=1
#f5edd5
#c2ccb5
#92ac9c
#688b87
#466971
#2f4858

*/

